src/scss/base/_typography.scss
/**
 * Basic typography style for copy text
 */

h1,
.h1 {
  font-family: var(--ff-serif);
  font-size: var(--step-4);
  font-weight: var(--fw-black);
  line-height: 1.3;
}

h2,
.h2 {
  font-family: var(--ff-serif);
  font-size: var(--step-3);
  font-weight: var(--fw-black);
  line-height: 1.3;
}

h3,
.h3 {
  font-family: var(--ff-display);
  font-size: var(--step-2);
  font-weight: var(--fw-semibold);
  line-height: 1.3;
}

h4,
.h4 {
  font-family: var(--ff-display);
  font-size: var(--step-1);
  font-weight: var(--fw-semibold);
  line-height: 1.3;
}

h1 + *,
.h1 + * {
  margin-top: rem(30);
}

* + h1,
* + .h1 {
  margin-top: rem(30);
}

h2 + *,
.h2 + * {
  margin-top: rem(40);
}

* + h2,
* + .h2 {
  margin-top: rem(40);
}

.hr + h2,
.hr + .h2 {
  margin-top: rem(30);
}

h3 + *,
.h3 + * {
  margin-top: rem(20);
}

* + h3,
* + .h3 {
  margin-top: rem(40);
}

h4 + *,
.h4 + * {
  margin-top: rem(16);
}

* + h4,
* + .h4 {
  margin-top: rem(30);
}

@include breakpoint-up(md) {
  :root {
    --step-1: calc(22 / 16 * 1rem);
    --step-2: calc(28 / 16 * 1rem);
    --step-3: calc(44 / 16 * 1rem);
    --step-4: calc(62 / 16 * 1rem);
  }

  h2 + *,
  .h2 + * {
    margin-top: rem(32);
  }

  * + h2,
  * + .h2 {
    margin-top: rem(50);
  }

  .hr + h2,
  .hr + .h2 {
    margin-top: rem(40);
  }

  * + h3,
  * + .h3 {
    margin-top: rem(50);
  }
}

